--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>REACT APP</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/1087/1087840.png" type="image/x-icon">
+    <title>EKS INTEC TASK</title>
   </head>
   <body>
     <div id="root"></div>
